tests/snapshots/mechanics-tactical_modes-missile_sharpshooter_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Jackdaw
ship/scanStrength                            = 36.000000
ship/passiveShieldEffectiveRechargeRate      = 7.978723
ship/passiveShieldRechargeRate               = 4.687500
ship/ehp                                     = 4375.078713
ship/shieldThermalDamageEffectiveResonance   = 0.100000
ship/shieldKineticDamageEffectiveResonance   = 0.112500
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.068750
ship/armorKineticDamageEffectiveResonance    = 0.140625
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 1914.893622
ship/hullEhp                                 = 1119.402957
ship/armorEhp                                = 1340.782134
ship/shieldDamageEffectiveResonance          = 0.587500
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.559375
ship/damagePerSecondWithReload               = 26.848014
ship/damagePerSecondWithoutReload            = 27.017075
ship/damageAlpha                             = 202.381667
ship/powerFree                               = 64.950000
ship/cpuFree                                 = 319.500000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 9.722222
ship/capacitorPeakRecharge                   = 9.722222
ship/alignTime                               = 6.175941
ship/hp                                      = 750.000000
ship/powerOutput                             = 71.250000
ship/powerLoad                               = 6.300000
ship/maxVelocity                             = 225.000000
ship/cpuOutput                               = 337.500000
ship/cpuLoad                                 = 18.000000
ship/rechargeRate                            = 225000.000000
ship/agility                                 = 4.050000
ship/maxTargetRange                          = 137500.000000
ship/scanSpeed                               = 3750.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanGravimetricStrength                 = 36.000000
ship/shieldCapacity                          = 1125.000000
ship/armorHP                                 = 750.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 600000.000000
ship/capacitorCapacity                       = 875.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 625.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusTacticalDestroyerCaldari1      = -15.000000
ship/shipBonusTacticalDestroyerCaldari2      = -75.000000
ship/shipBonusTacticalDestroyerCaldari3      = -25.000000
ship/sensorDampenerResistance                = 0.333333
ship/weaponDisruptionResistance              = 0.333333
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

mode/type = Jackdaw Sharpshooter Mode

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                         = Light Missile Launcher II
high_1/state                        = active
high_1/damageVolley                 = 202.381667
high_1/speedWithReload              = 7538.049809
high_1/speedOfReload                = 47.169809
high_1/damagePerSecondWithReload    = 26.848014
high_1/damagePerSecondWithoutReload = 27.017075
high_1/chargeAmount                 = 53.000002
high_1/power                        = 6.300000
high_1/cpu                          = 18.000000
high_1/speed                        = 7490.880000
high_1/heatDamage                   = 1.800000
high_1/reloadTime                   = 2500.000000
high_1/charge/type                  = Scourge Light Missile
high_1/charge/maxVelocity           = 9374.999627
high_1/charge/kineticDamage         = 202.381667
high_1/charge/explosionDelay        = 7500.000000
high_1/charge/aoeVelocity           = 255.000000
high_1/charge/aoeCloudSize          = 30.000000
high_1/charge/reloadTime            = 2500.000000
