tests/snapshots/regression-ancillary_repair-armor_loaded_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Vexor
ship/scanStrength                            = 16.000000
ship/passiveShieldEffectiveRechargeRate      = 3.034483
ship/passiveShieldRechargeRate               = 2.200000
ship/armorEffectiveRepairRate                = 76.666669
ship/armorRepairRate                         = 51.750000
ship/ehp                                     = 7465.278955
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 1517.241361
ship/hullEhp                                 = 2985.074553
ship/armorEhp                                = 2962.963041
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 580.000000
ship/cpuFree                                 = 275.000000
ship/capacitorDepletesIn                     = 180.000000
ship/capacitorPeakDeltaPercentage            = -77.471264
ship/capacitorPeakDelta                      = -5.820380
ship/capacitorPeakLoad                       = 13.333333
ship/capacitorPeakRecharge                   = 7.512953
ship/alignTime                               = 8.617206
ship/powerLoad                               = 120.000000
ship/cpuLoad                                 = 25.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusGC2                            = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

low_1/type                           = Medium Ancillary Armor Repairer
low_1/state                          = active
low_1/armorRepairRate                = 51.750000
low_1/chargeAmount                   = 32.000000
low_1/capacitorPeakLoad              = 13.333333
low_1/cycleTime                      = 12000.000000
low_1/armorDamageAmount              = 621.000000
low_1/charge/type                    = Nanite Repair Paste
low_1/charge/chargedRepairMultiplier = 3.000000
